@startuml
class Ex2_1{
+ String createTextFiles ()
+ int getNumOfLines ()
+ int getNumOfLinesThreads()
+ int getNumOfLinesThreadPool()
}
Ex2_1<--Ex2
FileThreads <-- Ex2_1
FileThreadPool <-- Ex2_1
Thread <|-- FileThreads
Callable <.. FileThreadPool
class FileThreads{
-String nameFile
-int countRows
+FileThreads(nameFile:String)
+void run()
}
class FileThreadPool{
-String nameFile
-int countRows
+FileThreadPool((nameFile:String)
+Integer call ()
}
class Thread{
+void run()
}
Interface Callable{
+Integer call()
}
class Ex2{
+ void deleteFiles()
}
@enduml